<resources>
    <!--  MainActivity  -->
    <string name="app_name">Press1MTimes</string>
    <string name="counter_default_value">000000</string>

    <!--  SettingsFragment  -->
    <string name="settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="notification">Notification</string>
    <string name="animation">Animation</string>
    <string name="splash">Splash</string>

    <!--  FinishActivity  -->
    <string name="finish">Finish of Press1MTimes</string>
    <string name="congratulations">Congratulations,\nyou completed Press1MTimes!</string>
    <string name="hope">I hope you enjoyed it</string>

    <!-- OptionsFragment -->
    <string name="options">Options</string>
    <string name="options_suggestion">Suggestion\nHold down the button to get information</string>
    <string name="options_suggestion_reset">Suggestion\nUse Reset button for reset counter</string>
    <string name="options_suggestion_score_share">Suggestion\nUse ScoreShare button for share or get score</string>
    <string name="options_suggestion_icons">Suggestion\nUse Icons button for change application icon</string>
    <string name="options_suggestion_splash">Suggestion\nUse Splash button for change splash position</string>

    <!-- ResetFragment -->
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

    <!-- ScoreShareFragment -->
    <string name="scoreshare">ScoreShare</string>
    <string name="scan">Scan QR</string>
    <string name="error">Something went wrong!</string>
    <string name="qr_error">QR-Code cannot be scanning</string>
    <string name="score_updated">Press1MTimes Score was updated</string>

    <!-- IconsFragment -->
    <string name="icons">Icons</string>
    <string name="default_icon">Default</string>
    <string name="p1mt_icon">Short</string>
    <string name="classic_icon">Classic</string>
    <string name="icon_changed">Application icon was changed</string>

    <!-- UpdateFragment -->
    <string name="update_released">Update Released</string>
    <string name="download">Download</string>

    <!--  SplashMessageFragment  -->
    <string name="splash_message">Splash Message</string>
    <string name="splash_position_updated">Splash Position was updated</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <!-- Website Link -->
    <string name="link">https://merive.herokuapp.com/P1MT</string>

    <!-- TODO -->
    <string name="todo">TODO</string>
</resources>