<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_24dp"
    android:paddingBottom="@dimen/padding_24dp">

    <TextView
        android:id="@+id/options_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:text="@string/options"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/font_medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/options_title_separator"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_12dp"
        android:layout_marginLeft="@dimen/margin_36dp"
        android:layout_marginRight="@dimen/margin_36dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:src="@xml/horizontal_line"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_6dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:padding="@dimen/padding_12dp"
        android:stateListAnimator="@null"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toStartOf="@+id/score_share_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_title" />

    <Button
        android:id="@+id/score_share_button"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:padding="@dimen/padding_12dp"
        android:stateListAnimator="@null"
        android:text="@string/scoreshare"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset_button"
        app:layout_constraintTop_toBottomOf="@+id/options_title" />

    <Button
        android:id="@+id/icons_button"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_6dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:padding="@dimen/padding_12dp"
        android:stateListAnimator="@null"
        android:text="@string/icons"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toStartOf="@+id/splash_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_button" />

    <Button
        android:id="@+id/splash_button"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:padding="@dimen/padding_12dp"
        android:singleLine="true"
        android:stateListAnimator="@null"
        android:text="@string/splash"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icons_button"
        app:layout_constraintTop_toBottomOf="@+id/score_share_button" />

    <Button
        android:id="@+id/options_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_48dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_button" />

    <ImageView
        android:id="@+id/options_cancel_button_separator"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_12dp"
        android:layout_marginLeft="@dimen/margin_36dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginRight="@dimen/margin_36dp"
        android:src="@xml/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_cancel_button" />

    <TextView
        android:id="@+id/options_tip_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:text="@string/options_tip"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_cancel_button"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>