<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400sp">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/red"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vibration_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:onClick="clickVibration"
        android:padding="12sp"
        android:text="@string/vibration"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:thumbTint="#3c3c3c"
        app:trackTint="@color/red" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:onClick="clickNotification"
        android:padding="12sp"
        android:text="@string/notification"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_switch"
        app:thumbTint="#3c3c3c"
        app:trackTint="@color/red" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/acceleration_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:onClick="clickAcceleration"
        android:padding="12sp"
        android:text="@string/acceleration"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_switch"
        app:thumbTint="#3c3c3c"
        app:trackTint="@color/red" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@xml/background"
        android:fontFamily="@font/odibee"
        android:onClick="clickOptions"
        android:padding="12sp"
        android:stateListAnimator="@null"
        android:text="@string/options"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceleration_switch" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/odibee"
        android:padding="18sp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_button" />


</androidx.constraintlayout.widget.ConstraintLayout>