<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_24dp"
    android:paddingBottom="@dimen/padding_12dp">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_title_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_12dp"
        android:layout_marginLeft="@dimen/margin_48dp"
        android:layout_marginRight="@dimen/margin_48dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:src="@xml/horizontal_line"
        app:layout_constraintBottom_toTopOf="@+id/vibration_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vibration_switch"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_6dp"
        android:background="@xml/background_dark"
        android:fontFamily="@font/odibee"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12dp"
        android:singleLine="true"
        android:text="@string/vibration"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toStartOf="@+id/notification_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:thumbTint="@color/primary"
        app:trackTint="@color/on_primary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:background="@xml/background_dark"
        android:fontFamily="@font/odibee"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12dp"
        android:singleLine="true"
        android:text="@string/notification"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vibration_switch"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:thumbTint="@color/primary"
        app:trackTint="@color/on_primary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/animation_switch"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_6dp"
        android:background="@xml/background_dark"
        android:fontFamily="@font/odibee"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12dp"
        android:singleLine="true"
        android:text="@string/animation"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toStartOf="@+id/splash_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_switch"
        app:thumbTint="@color/primary"
        app:trackTint="@color/on_primary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/splash_switch"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:background="@xml/background_dark"
        android:fontFamily="@font/odibee"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12dp"
        android:singleLine="true"
        android:text="@string/splash"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/animation_switch"
        app:layout_constraintTop_toBottomOf="@+id/notification_switch"
        app:thumbTint="@color/primary"
        app:trackTint="@color/on_primary" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_48dp"
        android:background="@xml/background_dark"
        android:fontFamily="@font/odibee"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:stateListAnimator="@null"
        android:text="@string/options"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_switch" />

    <ImageView
        android:id="@+id/settings_info_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_12dp"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_48dp"
        android:src="@xml/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_button" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:fontFamily="@font/odibee"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_button"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>