<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".FinishActivity"
    tools:ignore="Overdraw">

    <com.jetradarmobile.snowfall.SnowfallView
        android:id="@+id/coins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:snowflakeAlphaMax="256"
        app:snowflakeAlphaMin="128"
        app:snowflakeAngleMax="5"
        app:snowflakeImage="@drawable/icon"
        app:snowflakeSizeMax="36sp"
        app:snowflakeSizeMin="24sp"
        app:snowflakeSpeedMax="8"
        app:snowflakeSpeedMin="2"
        app:snowflakesAlreadyFalling="false"
        app:snowflakesFadingEnabled="true"
        app:snowflakesNum="256" />

    <TextView
        android:id="@+id/finish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/odibee"
        android:text="@string/you_won"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/congratulation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/odibee"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:background="@drawable/close"
        android:contentDescription="@string/todo"
        android:fontFamily="sans-serif-medium"
        android:onClick="clickExit"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/afterword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/odibee"
        android:text="@string/hope"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>