<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_splash_message"
    android:layout_width="296sp"
    android:layout_height="248sp"
    android:layout_gravity="center"
    android:background="@xml/background"
    android:minWidth="296sp"
    android:minHeight="248sp">

    <TextView
        android:id="@+id/splash_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/odibee"
        android:singleLine="true"
        android:text="@string/splash_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/splash_message_title_separator"
        android:layout_width="0sp"
        android:layout_height="12sp"
        android:layout_marginLeft="36sp"
        android:layout_marginRight="36sp"
        android:layout_marginBottom="12sp"
        android:src="@xml/line"
        app:layout_constraintBottom_toTopOf="@+id/left_position_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/right_position_button"
        android:layout_width="96sp"
        android:layout_height="142sp"
        android:layout_marginTop="28sp"
        android:background="@xml/background"
        android:padding="6sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left_position_button"
        app:layout_constraintTop_toBottomOf="@id/splash_message_title">

        <ImageView
            android:id="@+id/right_button"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:layout_marginTop="8sp"
            android:background="@xml/background"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            android:padding="18sp"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@xml/arrow_to_corner" />

        <ImageView
            android:id="@+id/splash_right_separator"
            android:layout_width="0sp"
            android:layout_height="12sp"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp"
            android:layout_marginBottom="8sp"
            android:src="@xml/line"
            app:layout_constraintBottom_toTopOf="@+id/splash_right_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/splash_right_text"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            android:fontFamily="@font/odibee"
            android:text="@string/right"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/left_position_button"
        android:layout_width="96sp"
        android:layout_height="142sp"
        android:layout_marginTop="28sp"
        android:background="@xml/background"
        android:padding="6sp"
        app:layout_constraintEnd_toStartOf="@+id/right_position_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_message_title">

        <ImageView
            android:id="@+id/left_button"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:layout_marginTop="6sp"
            android:background="@xml/background"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            android:padding="18sp"
            android:rotation="-180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@xml/arrow_to_corner" />

        <ImageView
            android:id="@+id/splash_left_separator"
            android:layout_width="0sp"
            android:layout_height="12sp"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp"
            android:layout_marginBottom="8sp"
            android:src="@xml/line"
            app:layout_constraintBottom_toTopOf="@+id/splash_left_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/splash_left_text"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            android:fontFamily="@font/odibee"
            android:singleLine="true"
            android:text="@string/left"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>